fixed height of tasks container and changed scrollbar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+
+::-webkit-scrollbar-track {
+    background: none;
+
+}
+
+::-webkit-scrollbar-thumb {
+    background: #c2c2c2;
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #aaa;
+}
